--- a/packages/notifications/slack_interactive.yaml
+++ b/packages/notifications/slack_interactive.yaml
@@ -35,6 +35,7 @@ automation:
     trigger:
       - platform: webhook
         webhook_id: slack
+        local_only: false
     condition:
       - condition: template
         value_template: >
