--- a/packages/lights/lights_power_save.yaml
+++ b/packages/lights/lights_power_save.yaml
@@ -1,5 +1,4 @@
 ---
-
 timer:
   # When calling the start service on a timer that is already running, it resets
   # the duration it will need to finish and restart the timer without triggering
@@ -7,46 +6,39 @@ timer:
   # timed lights that get triggered by motion. Starting a timer triggers a
   # started event unless the timer is paused, in that case, it triggers a
   # restarted event.
-  dining:
-    duration: '00:15:00'
-  braai_room_lights:
-    duration: '00:15:00'
+  scullery:
+    duration: '00:10:00'
+  main_ensuite:
+    duration: '00:10:00'
 
 automation:
   # Timer end = Turn off
-  - alias: Turn off light when timer ends
+  - alias: Light Power Save Trigger
+    description: Turn off light when timer ends
     mode: parallel
     trigger:
       - platform: event
         event_type: timer.finished
         event_data:
-          entity_id: timer.dining
+          entity_id: timer.main_ensuite
       - platform: event
         event_type: timer.finished
         event_data:
-          entity_id: timer.braai_room_lights
+          entity_id: timer.scullery
     action:
       - service: light.turn_off
         data_template:
           entity_id: "{{ trigger.event.data.entity_id|replace('timer.', 'light.') }}"
 
-  - alias: Start timer if turned on during day
+  - alias: Light Power Save Timer
+    description: Start timer if turned on
     mode: parallel
     trigger:
       - platform: state
-        entity_id: light.dining, light.braai_room
+        entity_id: light.main_ensuite, light.scullery
         to: 'on'
-    condition:
-      - condition: and
-        conditions:
-          - condition: sun
-            after: sunrise
-            after_offset: "00:59:00"
-          - condition: sun
-            before: sunset
-            before_offset: "-00:59:00"
     action:
       - service: timer.start
         data_template:
           entity_id: "{{ trigger.entity_id|replace('light.', 'timer.') }}"
-          duration: '00:02:30'
+          duration: '00:10:00'
