--- a/packages/lights/morning_routine.yaml
+++ b/packages/lights/morning_routine.yaml
@@ -4,6 +4,12 @@ timer:
   morning_routine:
     name: Morning Routine
     duration: '02:45:00'
+  morning_main_bedroom:
+    name: Morning fix main bedroom light
+    duration: '00:01:00'
+  morning_small_bedroom:
+    name: Morning fix small bedroom light
+    duration: '00:01:00'
 
 automation:
   - alias: Turn off main_bathroom lights after timer finish
@@ -74,3 +80,42 @@ automation:
               entity_id:
                 - switch.adaptive_lighting_small_bedroom
                 - switch.adaptive_lighting_sleep_mode_small_bedroom
+
+  # Timer end = Turn off
+  - alias: Morning fix timer end
+    description: Turn on light when timer ends
+    mode: parallel
+    trigger:
+      - platform: event
+        event_type: timer.finished
+        event_data:
+          entity_id: timer.morning_main_bedroom
+      - platform: event
+        event_type: timer.finished
+        event_data:
+          entity_id: timer.morning_small_bedroom
+    action:
+      - service: light.turn_on
+        data_template:
+          entity_id: "{{ trigger.event.data.entity_id|replace('timer.morning_', 'light.') }}"
+          brightness_pct: 100
+
+  - alias: Morning fix light turning off
+    description: Start timer if turned off
+    mode: parallel
+    trigger:
+      - platform: state
+        entity_id: light.main_bedroom, light.small_bedroom
+        to: 'on'
+      - platform: state
+        entity_id: light.main_bedroom, light.small_bedroom
+        attribute: brightness
+    condition:
+      - condition: state
+        entity_id: timer.morning_routine
+        state: 'active'
+    action:
+      - service: timer.start
+        data_template:
+          entity_id: "{{ trigger.entity_id|replace('light.', 'timer.morning_') }}"
+          duration: '00:00:10'
