--- a/packages/security/alarm_notifications.yaml
+++ b/packages/security/alarm_notifications.yaml
@@ -48,6 +48,12 @@ automation:
                   - condition: template
                     value_template: >
                       {{ trigger.to_state.state == 'pending' }}
+                  - condition: template
+                    value_template: >
+                      {{ trigger.to_state.state == 'unavailable' }}
+                  - condition: template
+                    value_template: >
+                      {{ trigger.from_state.state == 'unavailable' }}
             sequence:
               - service: script.log
                 data:
